--- a/src/dapp/index.html
+++ b/src/dapp/index.html
@@ -40,7 +40,7 @@
     </nav>
 
     <!--CONTENT AREA-->
-    <div class="container fixed-top" id="content-area">
+    <div class="container results fixed-top" id="content-area">
         <div class="row">
             <div class="col-12">
                 <h3>Results</h3>
