--- a/src/dapp/index.html
+++ b/src/dapp/index.html
@@ -91,6 +91,21 @@
                             <input type="button" class="btn btn-primary" id="airline-register" value="Register Airline">
                         </div>
                     </form>
+                    <h3>Vote Airline to operate</h3>
+                    <form>
+                        <div class="form-group">
+                            <label class="form">Airline Address</label>
+                            <input type="text" class="form-control" id="airline-candidate-address">
+                        </div>
+                        <div class="form-group">
+                            <label class="form">Message Sender</label>
+                            <input type="text" class="form-control" id="airline-candidate-register-from"
+                                placeholder="Enter address of the message sender, if empty, then contract owner will be used">
+                        </div>
+                        <div class="form-group">
+                            <input type="button" class="btn btn-primary" id="airline-candidate" value="Vote Airline">
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
