--- a/src/dapp/index.html
+++ b/src/dapp/index.html
@@ -89,6 +89,7 @@
                         </div>
                         <div class="form-group">
                             <input type="button" class="btn btn-primary" id="airline-register" value="Register Airline">
+                            <input type="button" class="btn btn-primary" id="airline-get" value="Get Airlane">
                         </div>
                     </form>
                     <h3>Vote Airline to operate</h3>
@@ -104,6 +105,21 @@
                         </div>
                         <div class="form-group">
                             <input type="button" class="btn btn-primary" id="airline-candidate" value="Vote Airline">
+                        </div>
+                    </form>
+                    <h3>Deposit Fund To Operate</h3>
+                    <form>
+                        <div class="form-group">
+                            <label class="form">Airline Address</label>
+                            <input type="text" class="form-control" id="airline-fund-address">
+                        </div>
+                        <div class="form-group">
+                            <label class="form">Message Sender</label>
+                            <input type="text" class="form-control" id="airline-fund-value"
+                                placeholder="Enter the fund value, minimum accepted is 10 ether">
+                        </div>
+                        <div class="form-group">
+                            <input type="button" class="btn btn-primary" id="airline-fund" value="Deposit">
                         </div>
                     </form>
                 </div>
